--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yuli-functions",
-  "description": "Firebase Cloud Functions for Yuli tutoring platform",
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
@@ -9,14 +9,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "22"
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-    "stripe": "^12.0.0",
-    "livekit-server-sdk": "^1.3.3"
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1",
+    "livekit-server-sdk": "^2.13.3",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
